# prompt-ops

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  TECHNICAL_DEBT.md  WEAVE_INTEGRATION.md  pyproject.toml  review.md  review_2.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature-request.yml
.github/workflows/: ci-with-coverage.yml  ci.yml  lint.yml  publish.yml
coding_updates/: coding_updates_1.md
configs/: README.md  default.yaml  facility-eval.yaml  facility-simple.yaml  facility-with-weave.yaml  facility.yaml  hotpotqa.yaml
dataset/facility-synth/: eval.ipynb  facility_prompt.yaml  facility_prompt_sys.txt  json_to_csv.py
docs/: README.md  adapter_selection_guide.md  dataset_adapter_selection_guide.md  inference_providers.md  metric_selection_guide.md
docs/advanced/: custom_adapters_metrics.md  custom_facility_config.yaml  example_custom_adapters.py  logging.md  readme.md
docs/basic/: quick_start.md  readme.md
examples/: README.md  basic_usage.py  dataset_adapters_example.py  model_specific_optimization.py
examples/advanced/: advanced_facility_config.md
examples/basic/: quick_start.md
frontend/: .env.example  .gitignore  README.md  check-deps.js  index.html  package-lock.json  package.json  start-dev.sh  tailwind.config.ts
frontend/backend/: README.md  config.py  config_transformer.py  core.py  (+7 more)
my_lpo_test_project/: README.md  config.yaml
notebook/: pdo_tutorial_101.ipynb  pdo_tutorial_final.ipynb  prompt-ops_101_cerebras.ipynb  prompt_ops_101_cerebras.ipynb
tests/: __init__.py
(+192 files in other folders)
